crates/carta/tests/snapshots/golden_writer__beamer__common__underline-smallcaps.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\ul{under} \textsc{small}
\end{frame}
