crates/carta/tests/snapshots/golden_writer__beamer__common__wide-and-combining-wrap.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
This is a deliberately long paragraph with wide 中文字符 glyphs and a
combining mark é so the writer measures column widths while wrapping at
the fill column boundary.
\end{frame}
